<resources>
    <string name="app_name">ExpenSure</string>
    <string name="signInText1">Sign in</string>
    <string name="signInText2">to your account</string>
    <string name="textUsername">Username</string>
    <string name="textPassword">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signUpText1">Create</string>
    <string name="signUpText2">new account</string>
    <string name="textFirstName">First Name</string>
    <string name="textLastName">Last Name</string>
    <string name="textEmail">Email</string>
    <string name="textContact">Contact Number</string>
    <string name="textConfirmPassword">Confirm Password</string>
    <string name="have_an_account">Already Registered?</string>
    <string name="continueText">Continue</string>
    <string name="furtherSteps">further steps</string>
    <string name="cancel">Cancel</string>
    <string name="select_profile_dp">Select Profile Picture</string>
    <string name="profile_dp_description">Select Profile Picture</string>
    <string name="company_logo">logo</string>
    <string name="profilePic">Profile</string>


    <!--    Dashboard Strings-->
    <string name="extendedFABNewExpense">Add New Expense</string>
    <string name="extendedFABNewExpenseText">New Expense</string>
    <string name="extendedFABUser">Open User Profile Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Add Expense Dialog Strings-->
    <string-array name="category">
        <item>Select Category...</item>
        <item>Food</item>
        <item>Travel</item>
        <item>Shopping</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>Education</item>
        <item>Salary</item>
        <item>Appliances</item>
        <item>Grocery</item>
        <item>Crockery</item>
        <item>Other</item>
    </string-array>
</resources>