<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".GoogleSignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="80dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:scaleType="fitXY"
                android:background="@drawable/signinwith_background"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/google_sign"
                android:contentDescription="@string/company_logo" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/signinwith_background"
                android:padding="10dp"
                android:src="@drawable/accenture_splash"
                android:contentDescription="@string/company_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continueText"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/furtherSteps"
                android:textSize="30sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/purple_500"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="false"
                android:focusable="false"
                app:cardCornerRadius="50dp"
                android:id="@+id/furtherGoogleProfileDP"
                app:cardElevation="10dp"
                app:cardBackgroundColor="#FF0A2F42">
                <ImageView
                    android:id="@+id/furtherGooglePickProfileDP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/profile_dp"
                    android:scaleType="fitXY"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/profile_dp_description" />
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_profile_dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/furtherGoogleUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                android:textColorHint="@color/purple_500"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:hint="@string/textUsername">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/furtherGooglePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/purple_500"
                app:passwordToggleEnabled="true"
                android:hint="@string/textPassword">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/furtherGooglePasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/purple_500"
                app:passwordToggleEnabled="true"
                android:hint="@string/textConfirmPassword">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/furtherGooglePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/purple_500"
                android:hint="@string/textContact">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/furtherGoogleRegisterButton"
                android:layout_width="200dp"
                app:elevation="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/purple_500"
                android:fontFamily="sans-serif"
                android:text="@string/register"
                android:textColor="@color/white"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:rippleColor="@color/purple_200" />

            <Button
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/furtherGoogleCancelButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                app:elevation="5dp"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/purple_500"
                app:rippleColor="@color/gray"
                app:strokeWidth="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>