<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginTop="60dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/loginTempLayout"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageLogoLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:transitionName="logo_image"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/accenture_splash" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:transitionName="logo_string"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/textViewLogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInText1"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textViewLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInText2"
            android:textSize="30sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/purple_500"
            android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:transitionName="username_move"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            android:textColorHint="@color/purple_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/textUsername">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/purple_500"
            app:passwordToggleEnabled="true"
            android:transitionName="pass_move"
            android:hint="@string/textPassword">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/forgotPassword"
            android:textColor="@color/purple_500"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="0dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            app:elevation="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textColor="@color/white"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:textAllCaps="false"
            android:transitionName="cred_button"
            android:onClick="loginUser"
            android:textSize="20sp"
            app:rippleColor="@color/purple_200" />
            />

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/loginPageNewUser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:elevation="5dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/purple_500"
            app:rippleColor="@color/gray"
            app:strokeWidth="2dp"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in with"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="10dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/loginGoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/signinwith_background"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:onClick="loginRegisterWithGoogle"
            android:scaleType="fitXY"
            android:elevation="1dp"
            android:focusable="true"
            android:clickable="true"
            android:transitionName="googleSignIn"
            android:src="@drawable/google_sign" />
        <ImageView
            android:id="@+id/loginAccenture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/signinwith_background"
            android:padding="10dp"
            android:elevation="1dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:focusable="true"
            android:clickable="true"
            android:src="@drawable/accenture_splash" />
    </LinearLayout>


</LinearLayout>